--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "cakephp\/cakephp": "~3.4.10",
         "mobiledetect\/mobiledetectlib": "2.*",
         "cakephp\/migrations": "~1.0",
-        "cakephp\/plugin-installer": "~1.0"
+        "cakephp\/plugin-installer": "~1.0",
+        "cakephp-fr/recaptcha": "~0.4"
     },
     "require-dev": {
         "psy\/psysh": "@stable",
